--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <script src="main.js"></script>
     <title>Completionist</title>
-  <script defer src="main.js"></script></head>
+  </head>
   <body>
     <div class="container">
       <div class="header">
